Show stamp rally link on Garapon (if they are linked). Add Garapon and Stamp Rally info into companion plugin and reorganize so we dont have endless tabs.
